--- a/src/main/resources/assets/beepsenvironmentalmod/lang/en_us.json
+++ b/src/main/resources/assets/beepsenvironmentalmod/lang/en_us.json
@@ -9,6 +9,8 @@
   "block.beepsenvironmentalmod.chromium_block": "Block of Chromium",
   "block.beepsenvironmentalmod.rose_wood_leaf": "Rose Wood Leaf",
   "block.beepsenvironmentalmod.infected_rose_wood_leaf": "Infected Rose Wood Leaf",
+  "block.beepsenvironmentalmod.chromium_ore": "Chromium Ore",
+  "block.beepsenvironmentalmod.chromium_deepslate_ore": "Deepslate Chromium Ore",
 
   "creativetab.beepsenvironmentalmod.beeps_environmental":"Beep's Environmental"
 }
