Added deactivated exchanger

--- a/src/main/resources/assets/beepsenvironmentalmod/lang/en_us.json
+++ b/src/main/resources/assets/beepsenvironmentalmod/lang/en_us.json
@@ -11,6 +11,9 @@
   "block.beepsenvironmentalmod.infected_rose_wood_leaf": "Infected Rose Wood Leaf",
   "block.beepsenvironmentalmod.chromium_ore": "Chromium Ore",
   "block.beepsenvironmentalmod.chromium_deepslate_ore": "Deepslate Chromium Ore",
+  "block.beepsenvironmentalmod.deactivated_exchanger": "Deactivated Exchanger",
 
-  "creativetab.beepsenvironmentalmod.beeps_environmental":"Beep's Environmental"
+  "creativetab.beepsenvironmentalmod.beeps_environmental":"Beep's Environmental",
+
+  "tooltip.beepsenvironmentalmod.deactivated_exchanger.tooltip": "A useful §6magical§r block"
 }
