setup project for worldgen

--- a/src/main/resources/assets/beepsenvironmentalmod/lang/en_us.json
+++ b/src/main/resources/assets/beepsenvironmentalmod/lang/en_us.json
@@ -3,9 +3,6 @@
   "item.beepsenvironmentalmod.chromium": "Chromium Ingot",
   "item.beepsenvironmentalmod.infested_string": "Infested String",
 
-
-
-
   "block.beepsenvironmentalmod.chromium_block": "Block of Chromium",
   "block.beepsenvironmentalmod.rose_wood_leaf": "Rose Wood Leaf",
   "block.beepsenvironmentalmod.infected_rose_wood_leaf": "Infected Rose Wood Leaf",
@@ -15,5 +12,7 @@
 
   "creativetab.beepsenvironmentalmod.beeps_environmental":"Beep's Environmental",
 
-  "tooltip.beepsenvironmentalmod.deactivated_exchanger.tooltip": "A useful §6magical§r block"
+  "tooltip.beepsenvironmentalmod.deactivated_exchanger.tooltip": "A useful §6magical§r block",
+
+  "enchantment.beepsenvironmentalmod.lightning_striker": "Striker"
 }
