--- a/src/main/resources/assets/beepsenvironmentalmod/lang/en_us.json
+++ b/src/main/resources/assets/beepsenvironmentalmod/lang/en_us.json
@@ -4,11 +4,19 @@
   "item.beepsenvironmentalmod.infested_string": "Infested String",
 
   "block.beepsenvironmentalmod.chromium_block": "Block of Chromium",
-  "block.beepsenvironmentalmod.rose_wood_leaf": "Rose Wood Leaf",
-  "block.beepsenvironmentalmod.infected_rose_wood_leaf": "Infected Rose Wood Leaf",
   "block.beepsenvironmentalmod.chromium_ore": "Chromium Ore",
   "block.beepsenvironmentalmod.chromium_deepslate_ore": "Deepslate Chromium Ore",
   "block.beepsenvironmentalmod.deactivated_exchanger": "Deactivated Exchanger",
+
+  "block.beepsenvironmentalmod.rose_wood_log": "Rosewood Log",
+  "block.beepsenvironmentalmod.rose_wood_planks": "Rosewood Planks",
+  "block.beepsenvironmentalmod.rose_wood_wood": "Rosewood Wood",
+  "block.beepsenvironmentalmod.stripped_rose_wood_log": "Stripped Rosewood Log",
+  "block.beepsenvironmentalmod.stripped_rose_wood_wood": "Stripped Rosewood Wood",
+  "block.beepsenvironmentalmod.rose_wood_leaf": "Rose Wood Leaf",
+  "block.beepsenvironmentalmod.infected_rose_wood_leaf": "Infected Rose Wood Leaf",
+  "block.beepsenvironmentalmod.rose_wood_sapling": "Rose Wood Leaf",
+
 
   "creativetab.beepsenvironmentalmod.beeps_environmental":"Beep's Environmental",
 
